--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter_local_notifications: ^15.1.0
   workmanager: ^0.5.1
   hive: ^2.2.3
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
